--- a/src/component/login/index.css
+++ b/src/component/login/index.css
@@ -20,7 +20,6 @@
     background-blend-mode: multiply;
     color: white;
     box-shadow: 5px 2px 8px grey;
-    
 }
 .height-100 {
     height: 100%;
@@ -57,4 +56,9 @@
     margin-top: 20px;
     border: none;
     cursor: pointer;
+}
+
+.form-text-error {
+    color: red;
+    margin: 0;
 }
